--- a/demo.html
+++ b/demo.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is demo HTML for Testing</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, corporis.</p>
 </body>
 </html>
